add task view for students

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Система проверки задач</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
