auth form is working

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Система проверки задач</title>
+
     <!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
 	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -17,8 +18,11 @@
 	        accurateTrackBounce:true
 	   });
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/93837398" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->  
+	<noscript>
+        <div>
+            <img src="https://mc.yandex.ru/watch/93837398" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
